# rust-dos

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: audio.rs  bus.rs  command.rs  cpu.rs  cpu_instr.rs  disk.rs  f80.rs  interrupt.rs  keyboard.rs  lib.rs  main.rs  recorder.rs  shell.rs  video.rs
src/instructions/: control.rs  fpu.rs  logic.rs  math.rs  misc.rs  mod.rs  string.rs  transfer.rs  utils.rs
src/instructions/fpu/: arithmetic.rs  comparison.rs  control.rs  data.rs  mod.rs  transcendental.rs
src/interrupts/: int00.rs  int08.rs  int10.rs  int11.rs  int12.rs  int15.rs  int16.rs  int1a.rs  int20.rs  int21.rs  int2f.rs  int33.rs  mod.rs  utils.rs
src/video/: mod.rs  vga.rs
tests/: alu_tests.rs  bus_tests.rs  cpu_control_tests.rs  cpu_logic_tests.rs  cpu_math_tests.rs  cpu_misc_tests.rs  cpu_string_tests.rs  cpu_tests.rs  cpu_transfer_tests.rs  dos_features_test.rs  f80_tests.rs  fpu_arithmetic_tests.rs  fpu_comparison_tests.rs  fpu_control_tests.rs  fpu_data_tests.rs  fpu_transcendental_tests.rs  instr_tests.rs  int21_reproduction.rs  int21_test.rs  load_exe_test.rs  misc_tests.rs  test_vga_integration.rs  wildcard_tests.rs
tests/testrunners/: mod.rs
