[package]
name = "rust-dos"
description = "An x86 DOS emulator written in Rust"
authors = ["dividebysandwich"]
repository = "https://github.com/dividebysandwich/rust-dos"
license = "GPL-2.0-or-later"
version = "0.1.0"
edition = "2024"

[dependencies]
iced-x86 = "1.21.0"
sdl2 = { version = "0.38" }
font8x8 = "0.3.1"
chrono = "0.4"
gif = "0.14.1"
bitflags = "2.10.0"
clap = { version = "4.5", features = ["derive"] }
